Script.js fixed + Code JS changé

--- a/index.html
+++ b/index.html
@@ -24,14 +24,5 @@
         </ul>
     </div>
 </body>
-<script>
-        document.addEventListener('keydown', function(event){
-        var vroom = document.querySelector('.grid');
-        vroom.classList.add("BOOST");
-        });
-        document.addEventListener('keyup', function(event){
-        var vroom = document.querySelector('.grid');
-        vroom.classList.remove("BOOST");
-        });
-</script>
+<script src="js/script.js"></script>
 </html>
