Numpad fonctionnel CSS + JS
Le Numpad affiche les touches pressées

--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
 </head>
-<body>
+<body tabindex="0">
     <div class="floor">
        <img id="grid" class="grid" src="img/grid.png" alt="grid">        
     </div>
     <div class="numpad">
         <ul>
-            <li>7</li>
-            <li>8</li>
-            <li>9</li>
-            <li>4</li>
-            <li>5</li>
-            <li>6</li>
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
+            <li id="number-numpad-7">7</li>
+            <li id="number-numpad-8">8</li>
+            <li id="number-numpad-9">9</li>
+            <li id="number-numpad-4">4</li>
+            <li id="number-numpad-5">5</li>
+            <li id="number-numpad-6">6</li>
+            <li id="number-numpad-1">1</li>
+            <li id="number-numpad-2">2</li>
+            <li id="number-numpad-3">3</li>
         </ul>
     </div>
 </body>
