Ajout des touches (AZERTY) au Keyboard

--- a/index.html
+++ b/index.html
@@ -6,22 +6,61 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
 </head>
-<body tabindex="0">
-    <div class="floor">
-       <img id="grid" class="grid" src="img/grid.png" alt="grid">        
+<body>
+    <div class="keyboard-all">
+        <div class="keyboard">
+            <ul>
+                <div class="keyboard-line-1">
+                    <li class="key-a">a</li>
+                    <li class="key-z">z</li>
+                    <li class="key-e">e</li>
+                    <li class="key-r">r</li>
+                    <li class="key-t">t</li>
+                    <li class="key-y">y</li>
+                    <li class="key-u">u</li>
+                    <li class="key-i">i</li>
+                    <li class="key-o">o</li>
+                    <li class="key-p">p</li>
+                </div>
+                <div class="keyboard-line-2">
+                    <li class="key-q">q</li>
+                    <li class="key-s">s</li>
+                    <li class="key-d">d</li>
+                    <li class="key-f">f</li>
+                    <li class="key-g">g</li>
+                    <li class="key-h">h</li>
+                    <li class="key-j">j</li>
+                    <li class="key-k">k</li>
+                    <li class="key-l">l</li>
+                    <li class="key-m">m</li>
+                </div>
+                <div class="keyboard-line-3">
+                    <li class="key-w">w</li>
+                    <li class="key-x">x</li>
+                    <li class="key-c">c</li>
+                    <li class="key-v">v</li>
+                    <li class="key-b">b</li>
+                    <li class="key-n">n</li>
+                </div>
+            </ul>
+        </div>
+        <div class="numpad">
+            <ul>
+                <li id="key-7">7</li>
+                <li id="key-8">8</li>
+                <li id="key-9">9</li>
+                <li id="key-4">4</li>
+                <li id="key-5">5</li>
+                <li id="key-6">6</li>
+                <li id="key-1">1</li>
+                <li id="key-2">2</li>
+                <li id="key-3">3</li>
+            </ul>
+        </div>
     </div>
-    <div class="numpad">
-        <ul>
-            <li id="number-numpad-7">7</li>
-            <li id="number-numpad-8">8</li>
-            <li id="number-numpad-9">9</li>
-            <li id="number-numpad-4">4</li>
-            <li id="number-numpad-5">5</li>
-            <li id="number-numpad-6">6</li>
-            <li id="number-numpad-1">1</li>
-            <li id="number-numpad-2">2</li>
-            <li id="number-numpad-3">3</li>
-        </ul>
+    
+    <div class="bg">
+       <img id="grid" class="grid" src="img/grid.png" alt="grid">        
     </div>
 </body>
 <script src="js/script.js"></script>
