Ajout des touches (AZERTY) au JS

--- a/index.html
+++ b/index.html
@@ -7,40 +7,41 @@
     <link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
 </head>
 <body>
-    <div class="keyboard-all">
+    <div id="keyboard" class="keyboard-all">
+       <h3 id="keyboard-title">Use your keyboard</h3>
         <div class="keyboard">
             <ul>
                 <div class="keyboard-line-1">
-                    <li class="key-a">a</li>
-                    <li class="key-z">z</li>
-                    <li class="key-e">e</li>
-                    <li class="key-r">r</li>
-                    <li class="key-t">t</li>
-                    <li class="key-y">y</li>
-                    <li class="key-u">u</li>
-                    <li class="key-i">i</li>
-                    <li class="key-o">o</li>
-                    <li class="key-p">p</li>
+                    <li id="key-a">a</li>
+                    <li id="key-z">z</li>
+                    <li id="key-e">e</li>
+                    <li id="key-r">r</li>
+                    <li id="key-t">t</li>
+                    <li id="key-y">y</li>
+                    <li id="key-u">u</li>
+                    <li id="key-i">i</li>
+                    <li id="key-o">o</li>
+                    <li id="key-p">p</li>
                 </div>
                 <div class="keyboard-line-2">
-                    <li class="key-q">q</li>
-                    <li class="key-s">s</li>
-                    <li class="key-d">d</li>
-                    <li class="key-f">f</li>
-                    <li class="key-g">g</li>
-                    <li class="key-h">h</li>
-                    <li class="key-j">j</li>
-                    <li class="key-k">k</li>
-                    <li class="key-l">l</li>
-                    <li class="key-m">m</li>
+                    <li id="key-q">q</li>
+                    <li id="key-s">s</li>
+                    <li id="key-d">d</li>
+                    <li id="key-f">f</li>
+                    <li id="key-g">g</li>
+                    <li id="key-h">h</li>
+                    <li id="key-j">j</li>
+                    <li id="key-k">k</li>
+                    <li id="key-l">l</li>
+                    <li id="key-m">m</li>
                 </div>
                 <div class="keyboard-line-3">
-                    <li class="key-w">w</li>
-                    <li class="key-x">x</li>
-                    <li class="key-c">c</li>
-                    <li class="key-v">v</li>
-                    <li class="key-b">b</li>
-                    <li class="key-n">n</li>
+                    <li id="key-w">w</li>
+                    <li id="key-x">x</li>
+                    <li id="key-c">c</li>
+                    <li id="key-v">v</li>
+                    <li id="key-b">b</li>
+                    <li id="key-n">n</li>
                 </div>
             </ul>
         </div>
