Ajout du système de packs + Pack 8-Bit

--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
 </head>
-<body>
+<body id="body">
+   <div class="packs">
+       <ul>
+           <li id="default" onclick="pack8bit()">
+               <img src="img/8bit.png" alt="8 Bit">
+           </li>
+           <li id="morty" onclick="packmorty()">
+               <img src="img/morty.png" alt="Rick and Morty">
+           </li>
+       </ul>
+   </div>
     <div id="keyboard" class="keyboard-all">
        <h3 id="keyboard-title">Use your keyboard</h3>
         <div class="keyboard">
